# MATH901_CMI

./: math901.ipynb  pyproject.toml  tp1_uncomplete.py  tp2_uncomplete.py  tp3.py  tp3_uncomplete.py
