[tool.poetry]
name = "math901-cmi"
version = "0.1.0"
description = ""
authors = ["Simon LEONARD <git-1001af4@sinux.sh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.2.1"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
tk = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
